samples/_failures_safe/1761360207_0c3a9e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03d5aa39.c: In function ‘main’:
./samples/SAFE/__tmp_03d5aa39.c:158:26: error: expected ‘;’ at end of input
  158 |     destroy_state_machine
      |                          ^
      |                          ;
./samples/SAFE/__tmp_03d5aa39.c:158:5: error: expected declaration or statement at end of input
  158 |     destroy_state_machine
      |     ^~~~~~~~~~~~~~~~~~~~~
